Np 48041 Fix: Remove old approvals on institution change (#401)