@@ -98,14 +98,11 @@ class CandidateTest extends LocalDynamoTest {
     private static final String BASE_PATH = ENVIRONMENT.readEnv("CUSTOM_DOMAIN_BASE_PATH");
     private static final String API_DOMAIN = ENVIRONMENT.readEnv("API_HOST");
     public static final URI CONTEXT_URI = UriWrapper.fromHost(API_DOMAIN).addChild(BASE_PATH, "context").getUri();
-    private static final URI HARDCODED_INSTITUTION_ID = URI.create(
-        "https://example"
-        + ".org/hardCodedInstitutionId");
+    private static final URI HARDCODED_INSTITUTION_ID = URI.create("https://example.org/hardCodedInstitutionId");
     private CandidateRepository candidateRepository;
     private PeriodRepository periodRepository;
 
     public static Stream<Arguments> candidateResetCauseProvider() {
-        //TODO: Test institution changed
         return Stream.of(Arguments.of(Named.of("change level",
                                                new CandidateResetCauseArgument(DbLevel.LEVEL_ONE,
                                                                                InstanceType.ACADEMIC_MONOGRAPH,
@@ -125,6 +122,15 @@ class CandidateTest extends LocalDynamoTest {
                                                                                InstanceType.ACADEMIC_MONOGRAPH,
                                                                                List.of(new InstitutionPoints(
                                                                                    HARDCODED_INSTITUTION_ID,
+                                                                                   randomBigDecimal(),
+                                                                                   null))))),
+                         Arguments.of(Named.of("affiliated institution changed",
+                                               new CandidateResetCauseArgument(DbLevel.LEVEL_TWO,
+                                                                               InstanceType.ACADEMIC_MONOGRAPH,
+                                                                               List.of(new InstitutionPoints(
+                                                                                   URI.create("https://example"
+                                                                                              + ".org"
+                                                                                              + "/someNewAffiliation"),
                                                                                    randomBigDecimal(),
                                                                                    null))))));
     }
@@ -155,7 +161,7 @@ class CandidateTest extends LocalDynamoTest {
     void shouldPersistNewCandidateWithCorrectLevelBasedOnVersionTwoLevelValues(DbLevel expectedLevel,
                                                                                String versionTwoValue) {
         var request = createUpsertCandidateRequestWithLevel(versionTwoValue, randomUri());
-        Candidate.upsert(request, candidateRepository);
+        Candidate.upsert(request, candidateRepository, periodRepository);
         var persistedCandidate = candidateRepository.findByPublicationId(request.publicationId())
                                      .orElseThrow()
                                      .candidate();
@@ -201,7 +207,7 @@ class CandidateTest extends LocalDynamoTest {
     void shouldUpdateCandidateWithSystemGeneratedModifiedDate() {
         var request = getUpdateRequestForExistingCandidate();
         var candidate = Candidate.fetchByPublicationId(request::publicationId, candidateRepository, periodRepository);
-        Candidate.upsert(request, candidateRepository);
+        Candidate.upsert(request, candidateRepository, periodRepository);
         var updatedCandidate = candidateRepository.findCandidateById(candidate.getIdentifier())
                                    .orElseThrow()
                                    .candidate();
@@ -213,7 +219,7 @@ class CandidateTest extends LocalDynamoTest {
         var request = getUpdateRequestForExistingCandidate();
         var candidate = Candidate.fetchByPublicationId(request::publicationId, candidateRepository, periodRepository);
         var expectedCreatedDate = candidate.getCreatedDate();
-        Candidate.upsert(request, candidateRepository);
+        Candidate.upsert(request, candidateRepository, periodRepository);
         var actualPersistedCandidate = candidateRepository.findCandidateById(candidate.getIdentifier())
                                            .orElseThrow()
                                            .candidate();
@@ -234,7 +240,7 @@ class CandidateTest extends LocalDynamoTest {
                                                                    Integer.parseInt(year),
                                                                    randomUri());
         assertThrows(IllegalCandidateUpdateException.class,
-                     () -> Candidate.upsert(updateRequest, candidateRepository));
+                     () -> Candidate.upsert(updateRequest, candidateRepository, periodRepository));
     }
 
     @Test
@@ -311,8 +317,8 @@ class CandidateTest extends LocalDynamoTest {
                                                              .getValue(), CURRENT_YEAR,
                                                          institutionToApprove, randomUri(), institutionToReject);
         var candidateBO = upsert(createRequest);
-        candidateBO.createNote(createNoteRequest(randomString(), randomString()))
-            .createNote(createNoteRequest(randomString(), randomString()))
+        candidateBO.createNote(createNoteRequest(randomString(), randomString()), candidateRepository)
+            .createNote(createNoteRequest(randomString(), randomString()), candidateRepository)
             .updateApproval(createUpdateStatusRequest(ApprovalStatus.APPROVED, institutionToApprove, randomString()))
             .updateApproval(createUpdateStatusRequest(ApprovalStatus.REJECTED, institutionToReject, randomString()));
         var dto = candidateBO.toDto();
@@ -326,7 +332,7 @@ class CandidateTest extends LocalDynamoTest {
             assertThat(dto.approvals().size(), is(equalTo(createRequest.institutionPoints().size())));
             assertThat(dto.notes().size(), is(2));
             assertThat(dto.totalPoints(), is(equalTo(setScaleAndRoundingMode(totalPoints))));
-            var note = dto.notes().get(0);
+            var note = dto.notes().getFirst();
             assertThat(note.text(), is(notNullValue()));
             assertThat(note.user(), is(notNullValue()));
             assertThat(note.createdDate(), is(notNullValue()));
@@ -404,7 +410,7 @@ class CandidateTest extends LocalDynamoTest {
         var nonApplicableCandidate = nonApplicableCandidate();
         Candidate.upsert(
             createUpsertCandidateRequest(nonApplicableCandidate.getPublicationId()),
-            candidateRepository
+            candidateRepository, periodRepository
         );
         var updatedApplicableCandidate = Candidate.fetch(nonApplicableCandidate::getIdentifier, candidateRepository,
                                                          periodRepository);
@@ -417,7 +423,7 @@ class CandidateTest extends LocalDynamoTest {
         var institutionId = randomUri();
         var assignee = randomString();
         var request = createUpsertCandidateRequest(institutionId);
-        Candidate.upsert(request, candidateRepository);
+        Candidate.upsert(request, candidateRepository, periodRepository);
         var candidate = Candidate.fetchByPublicationId(request::publicationId, candidateRepository, periodRepository)
                             .updateApproval(new UpdateAssigneeRequest(institutionId, assignee))
                             .updateApproval(
@@ -425,8 +431,8 @@ class CandidateTest extends LocalDynamoTest {
                             .updateApproval(
                                 createUpdateStatusRequest(ApprovalStatus.REJECTED, institutionId, randomString()))
                             .toDto();
-        assertThat(candidate.approvals().get(0).assignee(), is(equalTo(assignee)));
-        assertThat(candidate.approvals().get(0).finalizedBy(), is(not(equalTo(assignee))));
+        assertThat(candidate.approvals().getFirst().assignee(), is(equalTo(assignee)));
+        assertThat(candidate.approvals().getFirst().finalizedBy(), is(not(equalTo(assignee))));
     }
 
     @Test
@@ -436,10 +442,10 @@ class CandidateTest extends LocalDynamoTest {
         var candidate = upsert(upsertCandidateRequest);
         candidate.updateApproval(
             new UpdateStatusRequest(institutionId, ApprovalStatus.APPROVED, randomString(), randomString()));
-        var approval = candidate.toDto().approvals().get(0);
+        var approval = candidate.toDto().approvals().getFirst();
         var newUpsertRequest = createNewUpsertRequestNotAffectingApprovals(upsertCandidateRequest);
         var updatedCandidate = upsert(newUpsertRequest);
-        var updatedApproval = updatedCandidate.toDto().approvals().get(0);
+        var updatedApproval = updatedCandidate.toDto().approvals().getFirst();
 
         assertThat(updatedApproval, is(equalTo(approval)));
     }
@@ -451,10 +457,10 @@ class CandidateTest extends LocalDynamoTest {
         var candidate = upsert(upsertCandidateRequest);
         candidate.updateApproval(
             new UpdateStatusRequest(institutionId, ApprovalStatus.APPROVED, randomString(), randomString()));
-        var approval = candidate.toDto().approvals().get(0);
+        var approval = candidate.toDto().approvals().getFirst();
         var newUpsertRequest = createNewUpsertRequestNotAffectingApprovals(upsertCandidateRequest);
         var updatedCandidate = upsert(newUpsertRequest);
-        var updatedApproval = updatedCandidate.toDto().approvals().get(0);
+        var updatedApproval = updatedCandidate.toDto().approvals().getFirst();
 
         assertThat(updatedApproval, is(equalTo(approval)));
     }
@@ -492,7 +498,7 @@ class CandidateTest extends LocalDynamoTest {
         var newUpsertRequest = getUpsertCandidateRequest(arguments, creators, candidate.getPublicationId());
 
         var updatedCandidate = upsert(newUpsertRequest);
-        var updatedApproval = updatedCandidate.toDto().approvals().get(0);
+        var updatedApproval = updatedCandidate.toDto().approvals().getFirst();
         assertThat(updatedApproval.status(), is(equalTo(ApprovalStatusDto.NEW)));
     }
 
@@ -626,7 +632,7 @@ class CandidateTest extends LocalDynamoTest {
     }
 
     private Candidate upsert(UpsertCandidateRequest request) {
-        Candidate.upsert(request, candidateRepository);
+        Candidate.upsert(request, candidateRepository, periodRepository);
         return Candidate.fetchByPublicationId(request::publicationId, candidateRepository, periodRepository);
     }
 
@@ -688,7 +694,7 @@ class CandidateTest extends LocalDynamoTest {
     private UpsertCandidateRequest getUpdateRequestForExistingCandidate(int scale) {
         var institutionId = randomUri();
         var insertRequest = createUpsertCandidateRequest(institutionId);
-        Candidate.upsert(insertRequest, candidateRepository);
+        Candidate.upsert(insertRequest, candidateRepository, periodRepository);
         var creators = IntStream.of(insertRequest.creators().size())
                            .mapToObj(i -> randomUri())
                            .collect(Collectors.toMap(Function.identity(), e -> List.of(new URI[]{institutionId})));
